--- a/style.css
+++ b/style.css
@@ -1,12 +1,19 @@
 :root{
-   --cor-fundo: rgb(255, 249, 162);
-   --cor-titulo: rgb(196, 118, 1);
+   --cor-fundo: rgb(255, 246, 119);
+   --cor-titulo: rgb(128, 77, 1);
 }
 
 
 body{
-    background-color: var(--cor-fundo)
+    background-color: var(--cor-fundo);
 }
 .titulo{
-    color: var(--cor-titulo)
+    color: var(--cor-titulo);
+    text-align: center;
+    font-size: 50px;
+}
+.topo{
+    color: var(--cor-titulo);
+    text-align: center;
+    font-size: 25px;
 }
