--- a/style.css
+++ b/style.css
@@ -11,9 +11,16 @@ body{
     color: var(--cor-titulo);
     text-align: center;
     font-size: 50px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 .topo{
     color: var(--cor-titulo);
     text-align: center;
     font-size: 15px;
+}
+.texto{
+    background-color: rgb(255, 255, 255);
+    text-align: justify;
+    font-size: 10px;
+    font-family: Arial, Helvetica, sans-serif;
 }
