--- a/style.css
+++ b/style.css
@@ -24,5 +24,12 @@ body{
     font-size: 15px;
     font-family: Arial, Helvetica, sans-serif;
     margin: 20px;
-    padding: 10px;
+    padding: 15px;
+}
+.rodape{
+     color: var(--cor-titulo);
+    text-align: center;
+    font-size: 30px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
 }
