--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body{
     background-color: var(--cor-fundo);
 }
 .titulo{
-    font-weight: 500px;
+    font-style: italic;
     font-size: 50px;
 }
 .subtitulo{
